--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "base_name": "final_model",
+    "base_name": "dueling_eval",
+    "is_dueling": [true, false],
     "algorithms": [
         []
     ],
